--- a/roles/screensaver/tasks/main.yml
+++ b/roles/screensaver/tasks/main.yml
@@ -16,3 +16,6 @@
     defaults write com.apple.screensaver askForPasswordDelay 0
     defaults -currentHost write com.apple.screensaver idleTime 300
     defaults -currentHost write com.apple.screensaver moduleDict -dict moduleName RandomExtra3 path {{ ansible_user_dir }}/Library/Screen\ Savers/RandomExtra3.saver type 0
+
+- name: get 50 latest pics from davidrefood for screensaver pics
+  import_tasks: get_instagram_pics.yml
