--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
 .DS_Store
-*.retry
-*.pyc
-roles/ansible-role-homebrew
-roles/elliotweiser.osx-command-line-tools
 roles/superlumic-role-implisit-dev
+instagram-scraper.log
