--- a/dresnick.yml
+++ b/dresnick.yml
@@ -85,7 +85,7 @@
     - { role: iterm2, tags: iterm2 }
     - { role: scheduled-pmset, tags: scheduled-pmset }
     - { role: various, tags: various }
-    - { role: amazon-ecr-credential-helper, tags: amazon-ecr-credential-helper }
+    # - { role: amazon-ecr-credential-helper, tags: amazon-ecr-credential-helper }
     - { role: atom-config, tags: atom-config }
     - { role: screensaver, tags: screensaver }
     # - { role: minikube, tags: minikube }
