--- a/roles/various/files/.gitconfig
+++ b/roles/various/files/.gitconfig
@@ -1,27 +1,29 @@
 [help]
-	format = html
-	autocorrect = 30
+    format = html
+    autocorrect = 30
 [status]
-	showUntrackedFiles = all
+    showUntrackedFiles = all
 [alias]
-	fixup = "!f() { TARGET=$(git rev-parse "$1"); git commit --fixup=$TARGET ${@:2} && EDITOR=true git rebase -i --autostash --autosquash $TARGET^; }; f"
+    fixup = "!f() { TARGET=$(git rev-parse "$1"); git commit --fixup=$TARGET ${@:2} && EDITOR=true git rebase -i --autostash --autosquash $TARGET^; }; f"
 
-	st = status
-	lb = !git reflog show --pretty=format:'%gs ~ %gd' --date=relative | grep 'checkout:' | grep -oE '[^ ]+ ~ .*' | awk -F~ '!seen[$1]++' | head -n 10 | awk -F' ~ HEAD@{' '{printf(\"  \\033[33m%s: \\033[37m %s\\033[0m\\n\", substr($2, 1, length($2)-1), $1)}'
-	lba = !git reflog show --pretty=format:'%gs ~ %gd' --date=relative | grep 'checkout:' | grep -oE '[^ ]+ ~ .*' | awk -F~ '!seen[$1]++' | awk -F' ~ HEAD@{' '{printf(\"  \\033[33m%s: \\033[37m %s\\033[0m\\n\", substr($2, 1, length($2)-1), $1)}'
+    st = status
+    lb = !git reflog show --pretty=format:'%gs ~ %gd' --date=relative | grep 'checkout:' | grep -oE '[^ ]+ ~ .*' | awk -F~ '!seen[$1]++' | head -n 10 | awk -F' ~ HEAD@{' '{printf(\"  \\033[33m%s: \\033[37m %s\\033[0m\\n\", substr($2, 1, length($2)-1), $1)}'
+    lba = !git reflog show --pretty=format:'%gs ~ %gd' --date=relative | grep 'checkout:' | grep -oE '[^ ]+ ~ .*' | awk -F~ '!seen[$1]++' | awk -F' ~ HEAD@{' '{printf(\"  \\033[33m%s: \\033[37m %s\\033[0m\\n\", substr($2, 1, length($2)-1), $1)}'
 [user]
-	name = David Resnick
-	email = dresnick@salesforce.com
+    name = David Resnick
+    email = dresnick@salesforce.com
 [remote "origin"]
-	prune = true
+    prune = true
 [submodule]
-	recurse = true
+    recurse = true
 
 [advice]
-	detachedHead = false
+    detachedHead = false
 
 [core]
     pager = delta --plus-color="#012800" --minus-color="#340001"
 
 [interactive]
     diffFilter = delta --color-only
+[pull]
+    ff = only
