--- a/roles/osx-defaults/tasks/main.yml
+++ b/roles/osx-defaults/tasks/main.yml
@@ -107,3 +107,6 @@
       key: 'AppleEnableSwipeNavigateWithScrolls'
       type: boolean
       value: false
+
+- name: 'configure trackpad'
+  include_tasks: trackpad.yml
