--- a/dresnick.yml
+++ b/dresnick.yml
@@ -115,7 +115,7 @@
     - { role: zsh, tags: zsh }
     - { role: osx-defaults, tags: osx-defaults }
     - { role: iterm2, tags: iterm2 }
-    - { role: scheduled-pmset, tags: scheduled-pmset }
+    # - { role: scheduled-pmset, tags: scheduled-pmset }
     - { role: python, tags: python }
     - { role: various, tags: various }
     # - { role: amazon-ecr-credential-helper, tags: amazon-ecr-credential-helper }
