make link to .p10k.zsh file

--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -38,6 +38,7 @@
     - zprofile
     - zshenv
     - zshrc
+    - p10k.zsh
 - name: set current shell to zsh
   become: yes
   command: "dscl . -create /Users/{{ ansible_user }} UserShell /usr/local/bin/zsh"
