switch to font recommended by powerlevel10k

--- a/roles/iterm2/files/regular.plist
+++ b/roles/iterm2/files/regular.plist
@@ -10,7 +10,7 @@
       "Blur" : true,
       "Custom Directory" : "Advanced",
       "Minimum Contrast" : 0.3212767009493671,
-      "Normal Font" : "FiraCode-Retina 14",
+      "Normal Font" : "MesloLGS-NF-Regular 14",
       "Columns" : 166,
       "Rows" : 44,
       "Visual Bell" : 1,
